<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_home">My board</string>
    <string name="title_dashboard">New Reminder</string>
    <string name="title_notifications">Notifications</string>
    <string name="firstQuestion">What do you want to remember to do?</string>
    <string name="pill">Take my pill</string>
    <string name="secondQuestion">When do you want to it?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="thirdQuestion">At what time?</string>
    <string name="setTime">Set Time</string>
</resources>