<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/logobrain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstQuestion"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pill"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/secondQuestion"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textSize="20sp" />
                    <CheckBox
                        android:id="@+id/checkMonday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:textSize="20sp" />
                    <CheckBox
                        android:id="@+id/checkTuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:textSize="20sp" />
                    <CheckBox
                        android:id="@+id/checkWednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textSize="20sp" />
                    <CheckBox
                        android:id="@+id/checkThursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:textSize="20sp" />
                    <CheckBox
                        android:id="@+id/checkFriday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:textSize="20sp" />
                    <CheckBox
                        android:id="@+id/checkSaturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:textSize="20sp" />
                    <CheckBox
                        android:id="@+id/checkSunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

            </TableLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thirdQuestion"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />



            <Button
                android:id="@+id/btn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/setTime"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GUARDAR"
                android:textAllCaps="false"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
